@@ -1,6 +1,6 @@
 % File src/library/datasets/man/precip.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2007 R Core Team
+% Copyright 1995-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{precip}
@@ -23,9 +23,20 @@
   \emph{Interactive Data Analysis}.
   New York: Wiley.
 }
+\note{
+  The dataset version up to Nov.16, 2016 had a typo in \code{"Cincinnati"}'s
+  name.  The examples show how to recreate that version.
+}
 \examples{
 require(graphics)
 dotchart(precip[order(precip)], main = "precip data")
 title(sub = "Average annual precipitation (in.)")
+
+## Old ("wrong") version of dataset (just name change):
+precip.O <- local({
+   p <- precip; names(p)[names(p) == "Cincinnati"] <- "Cincinati" ; p })
+stopifnot(all(precip == precip.O),
+	  match("Cincinnati", names(precip)) == 46,
+	  identical(names(precip)[-46], names(precip.O)[-46]))
 }
 \keyword{datasets}
